<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LillyCover</string>

    <string name="menu_home">홈</string>
    <string name="menu_diagnose">두피 진단</string>
    <string name="menu_detail">더보기</string>

    <string name="text_diagnose">두피 진단하기</string>
    <string name="text_explain_connect">아래의 버튼을 눌러 뮬리와 WIFI 연결을 해주세요</string>
    <string name="text_wifi_setting">WIFI 설정하기</string>

    <string name="text_diagnose_first" tools:ignore="TypographyFractions">1/3 단계</string>
    <string name="text_take">촬영</string>
    <string name="text_retake">재촬영</string>
    <string name="text_check">확인</string>

    <string name="text_diagnose_second" tools:ignore="TypographyFractions">2/3 단계</string>

    <string name="text_diagnose_third" tools:ignore="TypographyFractions">3/3 단계</string>

    <string name="text_result">두피 진단결과</string>
    <string name="text_avg_result">평균 두피 진단결과</string>
    <string name="text_my_result">나의 두피 진단결과</string>
</resources>