<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.lillycover.hair.viewmodel.fragment.DiagnoseViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.fragment.DiagnoseFragment"
        tools:ignore="UselessLeaf">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_diagnose"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center" />
        </Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_wifi"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_explain_connect"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_wifi_setting"
                android:layout_marginTop="10dp"
                android:onClick="@{() -> viewModel.wifiSettingEvent()}"/>
        </LinearLayout>

    </LinearLayout>

</layout>