<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.lillycover.hair.viewmodel.activity.CamcorderViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.activity.CamcorderActivity">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_diagnose_first"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center" />
        </Toolbar>

        <SurfaceView
            android:layout_width="match_parent"
            android:layout_height="250dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:src="@drawable/ic_launcher_background"
                tools:tint="#FF0000"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:src="@drawable/ic_launcher_background"
                tools:tint="#FFA500"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:src="@drawable/ic_launcher_background"
                tools:tint="#FFFF00"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageview4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:src="@drawable/ic_launcher_background"
                tools:tint="#008000"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageview5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:src="@drawable/ic_launcher_background"
                tools:tint="#0000FF"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_take"
                android:layout_gravity="center" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_retake"
                    android:layout_marginEnd="10dp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_check"
                    android:layout_marginStart="10dp"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</layout>